# rust-api

./: .env  Cargo.toml  init.bat
src/: lib.rs  main.rs  schema.rs
src/models/: post.rs
src/services/: posts.rs
