[package]
edition = "2021"
name = "rust-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = {version = "0.5.0-rc.2", features = ["json"]}

rbson = "2.0"

serde = {version = "1", features = ["derive"]}
serde_json = "1.0"

async-trait = "0.1.56"

diesel = {version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"

# logging lib(required)
fast_log = "1.3"
log = "0.4"

# # rbatis (required) default is all-database+runtime-async-std-rustls
# rbatis = {version = "3.1"}
# also if you use actix-web+mysql
# rbatis = { version = "3.1", default-features = false, features = ["mysql","runtime-async-std-rustls"] }
